--- a/css/styles.css
+++ b/css/styles.css
@@ -951,6 +951,14 @@ ul {
   outline: 1px solid transparent;
 }
 
+.thumb-portfolio::before {
+display: inline-block;
+content: "";
+width: 50px;
+height: 50px;
+background-color: rgba(33, 150, 243, 0.9);
+}
+
 .item-element * {
   outline: 1px solid transparent;
 }
