--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,10 @@ body {
   letter-spacing: 0.03em;
 
   margin: 0;
+
+  padding-top: 80px;
 }
+
 
 /* цвет основного текста #757575 */
 
@@ -59,9 +62,10 @@ div {
 .page-header {
   border-bottom: 1px;
   position: fixed;
+  top: 0;
   left: 0;
-  right: 0;
-  /*width: 100%;*/
+  z-index: 50;
+  width: 100%;
 }
 
 /*Main nav*/
@@ -323,6 +327,35 @@ a {
   margin: 0 auto;
   padding: 0 auto;
   padding: 6.22px;
+}
+
+/*МОДАЛЬНЕ ВІКНО*/
+ 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+ opacity: 0;
+ pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%, -50%);
+
+  min-height: 581px;
+  min-width: 528px;
+  background-color: var(--primary-white-color);
+
+  padding-top: 221px;
 }
 
 /* section*/
@@ -957,6 +990,7 @@ ul {
 
 .item-element * {
   outline: 1px solid transparent;
+  z-index: 40;
 }
 
 .element-container {
