--- a/css/styles.css
+++ b/css/styles.css
@@ -301,7 +301,7 @@ a {
   box-sizing: inherit;
 }*/
 
-.button {
+.button-hero {
   border-radius: 4px;
   padding: 10px 32px;
   color: var(--title-text-color);
@@ -320,7 +320,7 @@ a {
   
 }
 
-.button {
+.button-hero {
   display: block;
   background-color: var(--accent-color);
   color: var(--primary-white-color);
