--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ div {
   content:"";
   display: block;
   position: absolute;
-  bottom: -1px;
+  bottom: 0;
   width: 100%;
   height: 4px;
   border-radius: 2px;
@@ -369,6 +369,7 @@ a {
   min-height: 581px;
   min-width: 528px;
   background-color: var(--primary-white-color);
+  border-radius: 3px;
 
   padding-top: 221px;
 }
@@ -968,19 +969,46 @@ ul {
 
   color: var(--title-text-color);
 
+  position: relative;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   text-align: center;
   min-width: 73px;
-}
 
+  /*transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;*/
+
+  transition: background-color 250ms linear,
+  color 250ms linear;
+}
 
 .filter .portf-button:hover,
 .filter .portf-button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   outline: auto;
+}
+
+
+.portf-button::after {
+  content:"";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.1);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  opacity: 0;
+  transition: opacity 250ms linear;
+}
+
+.portf-button:hover::after,
+.portf-button:focus::after {
+  opacity: 1;
 }
 
 
