--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,6 @@ div {
   margin-right: 10px;
 }
 
-
 /*.site-nav .item {
   outline:1px solid red;
   background-color: blue;
@@ -134,7 +133,6 @@ div {
 .site-nav .item + .item {
   margin-left: 50px;
 }
-
 
 .site-nav .link {
   display: block;
@@ -163,7 +161,6 @@ div {
   color: var(--accent-color);
 }
 
-
 .contacts {
   background-color: var(--primary-white-color);
   margin-left: auto;
@@ -175,7 +172,6 @@ div {
 .contacts .item + .item {
   margin-left: 50px;
 }
-
 
 /* Logo */
 .page-logo__header {
@@ -197,8 +193,6 @@ a {
   text-decoration: none;
 }
 
-
-
 .contacts .mail {
   color: var(--primary-text-color);
   font-weight: 500;
@@ -211,7 +205,8 @@ a {
   /*margin-right: 50px;*/
 }
 
-.contacts .mail:hover {
+.contacts .mail:hover,
+.contacts .mail:focus {
   color: var(--accent-color);
 }
 .contacts .phone {
@@ -225,7 +220,8 @@ a {
   display: flex;
   align-items: center;
 }
-.contacts .phone:hover {
+.contacts .phone:hover,
+.contacts .phone:focus {
   color: var(--accent-color);
 }
 
@@ -588,6 +584,12 @@ margin-right: 0;
 
 /* Our team*/
 
+.card {
+  box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+  border-radius: 0px 0px 4px 4px;
+}
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -744,22 +746,29 @@ margin-left: 30px;
    margin-bottom: 50px;
  }
  
-
-.item-icons{
+.clients-icons-link{
   display: flex;
   align-items: center;
   justify-content: center;
   height: 92px;
-  flex-basis: calc(100% / 6 - 30px);
+  
   border: 1px solid #AFB1B8;
   border-radius: 4px;
+}
+
+.clients-icons-link:hover,
+.clients-icons-link:focus {
+  border-color: var(--accent-color);
+}
+
+.item-icons {
+ flex-basis: calc(100% / 6 - 30px);
 }
 
 .item-icons:not(:last-child) {
   margin-right: 30px;
  
 }
-
 
 .clients-icons-svg {
   fill: #AFB1B8;
@@ -970,7 +979,7 @@ ul {
   color: var(--title-text-color);
 
   position: relative;
-
+  font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
@@ -1060,6 +1069,14 @@ ul {
   z-index: 40;
 }
 
+.card-portfolio {
+  border: 1px solid #EEEEEE;
+}
+
+.card-portfolio:hover,
+.card-portfolio:focus {
+  box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+}
 .element-container {
   margin-left: auto;
   margin-right: auto;
