--- a/css/styles.css
+++ b/css/styles.css
@@ -795,6 +795,9 @@ margin-left: 30px;
 /* Footer*/
 .footer {
   background-color: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
 }
 
 .logo-container {
@@ -891,6 +894,7 @@ margin-left: 30px;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.7;
+  margin-bottom: 9px;
 }
 
 /* FOOTER Social networks */
@@ -902,9 +906,9 @@ margin-left: 30px;
 
 .footer-networks {
   color:var(--primary-white-color);
-  font-style: normal;
+  font-style: bold;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 16px;
   margin-bottom: 20px;
 }
