--- a/css/styles.css
+++ b/css/styles.css
@@ -937,6 +937,7 @@ margin-left: 30px;
   font-size: 14px;
   line-height: 16px;
   margin-bottom: 20px;
+  text-transform: uppercase;
 }
 
 .social-icons-footer {
