--- a/css/styles.css
+++ b/css/styles.css
@@ -767,6 +767,10 @@ margin-left: 30px;
    justify-content: center;
  }
  
+.item-icons .clients-icons-link {
+  color: var(--primary-text-color);
+ }
+
  .section-title {
    /*margin-top: 94px;*/
    margin-bottom: 50px;
@@ -780,6 +784,8 @@ margin-left: 30px;
   
   border: 1px solid #AFB1B8;
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-icons-link:hover,
@@ -797,14 +803,14 @@ margin-left: 30px;
 }
 
 .clients-icons-svg {
-  fill: #AFB1B8;
+  fill: currentColor;
   display: flex;
   text-align: center;
 }
 
 .clients-icons-svg:hover,
 .clients-icons-svg:focus {
-  fill: var(--accent-color);
+  fill: currentColor;
 }
 
 /*.icons-set {
