--- a/css/styles.css
+++ b/css/styles.css
@@ -1092,22 +1092,13 @@ ul {
 }
 
 .flex-element > .item-element{
-  flex-basis: calc(100% / 3 -30px);
+  flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
 
 .thumb-portfolio {
   outline: 1px solid transparent;
-}
-
-.item-element * {
-  outline: 1px solid transparent;
-  z-index: 40;
-}
-
-.card-portfolio {
-  border: 1px solid #EEEEEE;
 }
 
 .card-portfolio:hover,
@@ -1143,11 +1134,9 @@ ul {
 }
 
 
-
 .flex-element:nth-child(3n) {
   margin-right: 0;
 }
-
 
 .feature-list-portfolio .title {
   margin-top: 0;
@@ -1196,20 +1185,26 @@ ul {
 
 .overlay {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  width: 100%;
+  height: 100%;
+  padding: 30px;
   outline: 3px solid green;
-  transform: translate(-50%, -50%);
+  transform: translatey(100%);
   opacity: 0;
+  box-sizing: border-box;
 }
 
-.card-portfolio :hover .overlay,
-.card-portfolio :focus .overlay{
+.card-portfolio:hover .overlay,
+.card-portfolio:focus .overlay{
+  transform:translatey(0);
   opacity: 1;
 }
 
 .thumb-portfolio {
   position: relative;
+  overflow: hidden;
 }
 
 .overlay-text {
@@ -1221,7 +1216,7 @@ ul {
   line-height: 133%;
 }
 
-.thumb-portfolio::before {
+.thumb-portfolio {
 display: inline-block;
 position: absolute;
 content: "";
@@ -1233,8 +1228,8 @@ transform:translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.thumb-portfolio:hover::before,
-.thumb-portfolio:focus::before {
+.thumb-portfolio:hover,
+.thumb-portfolio:focus {
   opacity: 1;
 }
 
