--- a/css/styles.css
+++ b/css/styles.css
@@ -1109,7 +1109,8 @@ ul {
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
-  border: 1px solid transparent;
+  border: 1px solid #eeeeee;
+  border-top: none;
   background-color: var(--primary-white-color);
 }
 
@@ -1202,11 +1203,6 @@ ul {
   opacity: 1;
 }
 
-.thumb-portfolio {
-  position: relative;
-  overflow: hidden;
-}
-
 .overlay-text {
   color: var(--primary-white-color);
   font style: normal;
@@ -1217,15 +1213,15 @@ ul {
 }
 
 .thumb-portfolio {
-display: inline-block;
-position: absolute;
-content: "";
-width: 100%;
-height: 100%;
+/*display: inline-block;*/
+position: relative;
+overflow: hidden;
+/*width: 100%;
+height: 100%;*/
 background-color: rgba(33, 150, 243, 0.9);
-opacity: 0;
-transform:translateY(100%);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+/*opacity: 0;*/
+/*transform:translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
 }
 
 .thumb-portfolio:hover,
