--- a/css/styles.css
+++ b/css/styles.css
@@ -1195,6 +1195,8 @@ ul {
   transform: translatey(100%);
   opacity: 0;
   box-sizing: border-box;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-portfolio:hover .overlay,
