--- a/css/styles.css
+++ b/css/styles.css
@@ -476,6 +476,7 @@ margin-right: 0;
   font-style: normal;
   font-size: 14px;
   color: var(--primary-white-color);
+  text-transform: uppercase;
 }
 
 /* Features */
@@ -1195,8 +1196,7 @@ ul {
   transform: translatey(100%);
   opacity: 0;
   box-sizing: border-box;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-portfolio:hover .overlay,
