--- a/css/styles.css
+++ b/css/styles.css
@@ -465,18 +465,37 @@ margin-right: 0;
   position: absolute;
 }
 
+.thumb-for-overlay {
+ position: relative;
+}
+
 .overlay-studio {
   position: absolute;
-  bottom: 0;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%, -50%);
 }
+
+
+
+/*.overlay-studio {
+  position: relative;
+}
+
+.overlay-studio-text {
+  position: absolute;
+  top: 0;
+  right: 0;
+}*/
 
 .overlay-studio-text {
   font-family: Roboto, sans-serif;
   font-weight: bold;
   font-style: normal;
   font-size: 14px;
-  color: var(--primary-white-color);
+  color: red;
   text-transform: uppercase;
+  
 }
 
 /* Features */
@@ -792,6 +811,7 @@ margin-left: 30px;
 .clients-icons-link:hover,
 .clients-icons-link:focus {
   border-color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .item-icons {
@@ -1102,8 +1122,8 @@ ul {
   outline: 1px solid transparent;
 }
 
-.card-portfolio:hover,
-.card-portfolio:focus {
+.item-element:hover,
+.item-element:focus {
   box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
 }
 .element-container {
