--- a/css/styles.css
+++ b/css/styles.css
@@ -455,26 +455,21 @@ margin-right: 0;
   position: relative;
 }
 
-.thumb-studio::before {
+.thumb-studio {
   display: inline-block;
   content:"";
-  width: 370px;
-  height: 70px;
-  bottom: 0;
-  background-color: rgba(47, 48, 58, 0.8);
-  position: absolute;
+  position: relative;
 }
 
 .thumb-for-overlay {
- position: relative;
+ position: absolute;
+ width: 100%;
+ height: 70px;
+ display: flex;
+ bottom:0;
+ background-color: rgba(47, 48, 58, 0.8);
 }
 
-.overlay-studio {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform:translate(-50%, -50%);
-}
 
 
 
@@ -489,13 +484,14 @@ margin-right: 0;
 }*/
 
 .overlay-studio-text {
-  font-family: Roboto, sans-serif;
   font-weight: bold;
-  font-style: normal;
   font-size: 14px;
-  color: red;
+  color: var(--primary-white-color);
   text-transform: uppercase;
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  content:"";
 }
 
 /* Features */
