--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ div {
 
 .current {
   position: relative;
-}
+  
 
 .current::after {
   content:"";
@@ -134,7 +134,7 @@ div {
   margin-left: 50px;
 }
 
-.site-nav .link {
+.link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -146,10 +146,14 @@ div {
   line-height: 1.1;
   letter-spacing: 0.02em;
   
+  transition-property: color;
+  transition-duration: 2000ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /*transition: color 2000ms cubic-bezier(0.4, 0, 0.2, 1);*/
 }
 
-.site-nav .link:hover,
-.site-nav .link:focus {
+.link:hover,
+.link:focus {
   color: var(--accent-color);
 }
 
@@ -200,6 +204,7 @@ a {
   line-height: 1.1;
   letter-spacing: 0.02em;
 
+
   display: flex;
   align-items: center;
   /*margin-right: 50px;*/
@@ -216,6 +221,7 @@ a {
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
+
 
   display: flex;
   align-items: center;
@@ -461,6 +467,11 @@ margin-right: 0;
   position: relative;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 .thumb-for-overlay {
  position: absolute;
  width: 100%;
@@ -468,10 +479,9 @@ margin-right: 0;
  display: flex;
  bottom:0;
  background-color: rgba(47, 48, 58, 0.8);
+ align-items: center;
+ justify-content: center;
 }
-
-
-
 
 /*.overlay-studio {
   position: relative;
@@ -488,9 +498,6 @@ margin-right: 0;
   font-size: 14px;
   color: var(--primary-white-color);
   text-transform: uppercase;
-  display: flex;
-  align-items: center;
-
 }
 
 /* Features */
